--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ jdk:
 before_install:
   - wget http://apache.01link.hk//jmeter/binaries/apache-jmeter-5.0.tgz
   - tar -xzvf apache-jmeter-5.0.tgz
+
+branches:
+  only:
+    - JMeter5.0
