--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ jdk:
 install:
   - wget http://apache.01link.hk//jmeter/binaries/apache-jmeter-5.0.tgz
   - tar -xzvf apache-jmeter-5.0.tgz
+
+script:
   - ./apache-jmeter-5.0/bin/jmeter -n -t src/chapter1/HTTPRequest.jmx
 
 branches:
