--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,41 @@ install:
   - tar -xzvf apache-jmeter-5.0.tgz
 
 script:
-  - ./apache-jmeter-5.0/bin/jmeter -n -t src/chapter1/HTTPRequest.jmx
+  - find ./src/ -name "*.jmx" > fileName.txt
+  - cat fileName.txt
+  - for file in $(<fileName.txt)
+  - do
+  - #echo $file
+  - result=$(./apache-jmeter-5.0/bin/jmeter -n -t $file | grep 'Err:' | sed 's/.*(\([0-9]*\).*/\1/g')
+  -   if [ $result -gt 0 ]
+  -   then
+  -     echo $file fail
+  -     exit 1
+  -   else
+  -     echo $file succedd
+  -   fi
+  - done
 
 branches:
   only:
     - master
+
+
+
+
+#!/usr/bin/env bash
+
+  find ./src/ -name "*.jmx" > fileName.txt
+
+  #cat fileName.txt
+
+  for file in $(<fileName.txt)
+  do
+  #echo $file
+  result=$(./apache-jmeter-5.0/bin/jmeter -n -t $file | grep 'Err:' | sed 's/.*(\([0-9]*\).*/\1/g')
+  if [ $result -gt 0 ]
+  then
+  echo $file failed
+  exit 1
+  fi
+  done
